2011-04-02  Ivan Maidanski  <ivmai@mail.ru>

	* allchblk.c (GC_print_hblkfreelist): Adjust (make uniform across
	BDWGC) printed message (adjust letters case, terminating dot and
	new line symbols).
	* alloc.c (GC_check_fl_marks): Ditto.
	* backgraph.c (new_back_edges): Ditto.
	* checksums.c (GC_check_dirty): Ditto.
	* darwin_stop_world.c (GC_push_all_stacks,
	GC_suspend_thread_list): Ditto.
	* dbg_mlc.c (GC_print_type, GC_debug_free, GC_debug_realloc,
	store_old): Ditto.
	* dyn_load.c (GC_register_dynamic_libraries): Ditto.
	* mark.c (GC_initiate_gc, GC_mark_some, GC_mark_from, GC_push_all,
	GC_push_selected, GC_push_next_marked_dirty): Ditto.
	* mark_rts.c (GC_exclude_static_roots_inner): Ditto.
	* os_dep.c (GC_remap, GC_default_push_other_roots,
	GC_push_thread_structures, GC_dirty_init, GC_read_dirty,
	catch_exception_raise_state, catch_exception_raise_state_identity,
	GC_mprotect_thread_notify, GC_mprotect_thread,
	catch_exception_raise): Ditto.
	* pthread_stop_world.c (GC_print_sig_mask, GC_push_all_stacks,
	GC_stop_world, GC_stop_init): Ditto.
	* pthread_support.c (GC_thr_init, GC_register_my_thread_inner,
	GC_start_routine): Ditto.
	* win32_threads.c (GC_register_my_thread_inner,
	GC_push_all_stacks, GC_win32_start_inner, GC_pthread_join,
	GC_pthread_start_inner): Ditto.
	* alloc.c (GC_expand_hp_inner): Realign the code.
	* mark.c (GC_mark_from, GC_mark_local, GC_do_parallel_mark):
	Ditto.
	* misc.c (GC_init): Ditto.
	* os_dep.c (GC_dirty_init, GC_read_dirty): Ditto.
	* include/private/gc_pmark.h (PUSH_CONTENTS_HDR): Ditto.
	* tests/test.c (run_one_test): Ditto.
	* misc.c (GC_err_puts): Document.
	* misc.c (GC_err_write): Remove.
	* os_dep.c (dump_maps): Ditto.
	* include/private/gc_priv.h (GC_err_write): Ditto.
	* os_dep.c (GC_print_address_map): Call GC_err_puts() instead of
	dump_maps() and GC_err_write().
	* os_dep.c (GC_read_dirty): Remove redundant brackets.

2011-04-02  Ivan Maidanski  <ivmai@mail.ru>
